--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,204 @@
+absl-py==2.3.1
+aiofiles==24.1.0
+annotated-types==0.7.0
+anyio==4.9.0
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
+array_record==0.7.2
+arrow==1.3.0
+asttokens==3.0.0
+astunparse==1.6.3
+async-lru==2.0.5
+attrs==25.3.0
+babel==2.17.0
+beautifulsoup4==4.13.5
+bleach==6.2.0
+Brotli==1.1.0
+certifi==2025.7.9
+cffi==2.0.0
+charset-normalizer==3.4.2
+click==8.2.1
+comm==0.2.2
+contourpy==1.3.2
+cycler==0.12.1
+debugpy==1.8.14
+decorator==5.2.1
+defusedxml==0.7.1
+dm-tree==0.1.9
+docstring_parser==0.16
+einops==0.8.1
+etils==1.12.2
+executing==2.2.0
+fastapi==0.116.1
+fastjsonschema==2.21.2
+ffmpy==0.6.0
+filelock==3.18.0
+flatbuffers==25.2.10
+fonttools==4.58.5
+fqdn==1.5.1
+fsspec==2025.5.1
+gast==0.6.0
+google-pasta==0.2.0
+googleapis-common-protos==1.70.0
+gradio==5.36.2
+gradio_client==1.10.4
+groovy==0.1.2
+grpcio==1.73.1
+h11==0.16.0
+h5py==3.14.0
+hf-xet==1.1.5
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.33.4
+idna==3.10
+imagecodecs==2025.3.30
+imageio==2.37.0
+immutabledict==4.2.1
+importlib_resources==6.5.2
+iniconfig==2.1.0
 ipykernel==6.29.5
 ipython==8.27.0
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-matplotlib-inline==0.1.7
-numpy
-opencv-python==4.10.0.84
-pandas==2.2.3
 ipywidgets==8.1.5
-matplotlib==3.9.2
-pillow==11.0.0
-tensorflow==2.19
+isoduration==20.11.0
+jedi==0.19.2
+Jinja2==3.1.6
+json5==0.12.1
+jsonpointer==3.0.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.12.0
+jupyter-lsp==2.3.0
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+jupyter_server==2.17.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.4.9
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.15
+kagglehub==0.3.12
+keras==3.10.0
+keras-core==0.1.7
 keras-cv==0.9.0
-pyyaml==6.0.2
-scikit-image==0.25.0
+kiwisolver==1.4.8
+lark==1.3.0
+lazy_loader==0.4
+libclang==18.1.1
+Markdown==3.8.2
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.1.4
+ml_dtypes==0.5.1
+namex==0.1.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.5
+notebook==7.4.7
+notebook_shim==0.2.4
+numpy==2.1.3
+nvidia-cublas-cu12==12.5.3.2
+nvidia-cuda-cupti-cu12==12.5.82
+nvidia-cuda-nvcc-cu12==12.5.82
+nvidia-cuda-nvrtc-cu12==12.5.82
+nvidia-cuda-runtime-cu12==12.5.82
+nvidia-cudnn-cu12==9.3.0.75
+nvidia-cufft-cu12==11.2.3.61
+nvidia-curand-cu12==10.3.6.82
+nvidia-cusolver-cu12==11.6.3.83
+nvidia-cusparse-cu12==12.5.1.3
+nvidia-nccl-cu12==2.23.4
+nvidia-nvjitlink-cu12==12.5.82
+opencv-python-headless==4.12.0.88
+opt_einsum==3.4.0
+optree==0.16.0
+orjson==3.10.18
+overrides==7.7.0
+packaging==25.0
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
+pillow==11.0.0
+platformdirs==4.3.8
+pluggy==1.6.0
+prometheus_client==0.23.1
+promise==2.3
+prompt_toolkit==3.0.51
+protobuf==5.29.5
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==20.0.0
+pycparser==2.23
+pydantic==2.11.7
+pydantic_core==2.33.2
+pydub==0.25.1
+Pygments==2.19.2
+pyparsing==3.2.3
+pytest==8.4.1
+python-dateutil==2.9.0.post0
+python-json-logger==3.3.0
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
+pyzmq==27.0.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.4
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rfc3987-syntax==1.1.0
+rich==14.0.0
+rpds-py==0.27.1
 ruff==0.9.9
-pytest
-imagecodecs
-gradio==5.36.2
+safehttpx==0.1.6
+scikit-image==0.25.0
+scipy==1.16.0
+semantic-version==2.10.0
+Send2Trash==1.8.3
+shellingham==1.5.4
+simple-parsing==0.1.7
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.8
+stack-data==0.6.3
+starlette==0.47.1
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tensorflow==2.19.0
+tensorflow-datasets==4.9.9
+tensorflow-io-gcs-filesystem==0.37.1
+tensorflow-metadata==1.17.2
+termcolor==3.1.0
+terminado==0.18.1
+tifffile==2025.6.11
+tinycss2==1.4.0
+toml==0.10.2
+tomlkit==0.13.3
+tornado==6.5.1
+tqdm==4.67.1
+traitlets==5.14.3
+typer==0.16.0
+types-python-dateutil==2.9.0.20250822
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+uri-template==1.3.0
+urllib3==2.5.0
+uvicorn==0.35.0
+wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
+Werkzeug==3.1.3
+widgetsnbextension==4.0.14
+wrapt==1.17.2
+zipp==3.23.0
